<resources>
    <string name="app_name">Foodie</string>
    <string name="foodie">FOODIE</string>
    <string name="enter_mobile_number">Enter Mobile Number(10 Digits)</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_now">Don\'t have an account?Sign up now</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be 5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="name_min">Name (Min.3 characters)</string>
    <string name="mail">Email Address</string>
    <string name="mobile_number">Mobile Number (10 Digits)</string>
    <string name="password_min">Password (Min 4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="warning_fp">Enter your registered mobile number and email below:</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="preference_file_name">FoodRunner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_drawer">open_drawer</string>
    <string name="close_drawer">close_drawer</string>
    <string name="sort">Cost(Low to High)</string>
    <string name="sortRev">Cost(High to Low)</string>
    <string name="sortRate">Rating</string>
    <string name="sortCost">Cost For One</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="enter_the_otp_sent">Enter the OTP sent to Registered Mobile Number</string>
    <string name="favourites">Favourites</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>
    <string name="enter_address">Enter Delivery Address</string>
    <string name="Name">Name</string>
    <string name="mobile">Mob.Number</string>
    <string name="address">Address</string>
    <string name="answer_1">A1.Yes of course the food is fresh. We are the partners of best hotels in our area. They always provide the best foods and we check the food preparation methods also.</string>
    <string name="question_1">Q1.Is the Food will be fresh?</string>
    <string name="question_2">Q2.How can I pay for a order in Foodie?</string>
    <string name="answer_2">A2.There are two modes you can either Online or at Pay on Delivery. You can use Debit card,Credit card,Upi and any wallet through Online</string>
    <string name="question_3">Q3.Can I order two or more restaurants at same time?</string>
    <string name="answer_3">A3.Sorry, you cannot order at same time in a single delivery but can order as two delivery is possible.</string>
    <string name="question_4">Q4.Why do you charge Delivery charges?</string>
    <string name="answer_4">A4.Each restaurant gives us a small percentage of the order amount. But for small orders we canno afford to deliver within commission we receive. Instead of declining such orders, we give you the option of delivering it to you, if you are prepared to pay the delivery charges.</string>
    <string name="question_5">Q5.How much time will it take to deliver?</string>
    <string name="answer_5">A5.Thats depends on the hotel you choose. If you choose a hotel which is far away from your Delivery loaction it takes some more time. But it will not go beyond the time estimated in the options. It may delay only if any wheather changes.</string>
    <string name="_250">250</string>
    <string name="person">/Person</string>
    <string name="restaurant">Restaurant</string>
    <string name="_4_0">4.0</string>
    <string name="rs">₹</string>
    <string name="food_name">Food Name</string>
    <string name="_1">1</string>
    <string name="add">Add</string>
    <string name="choose_from">choose from menu listed beow:</string>
    <string name="place_the_order">Place the Order</string>
    <string name="foods_from">Ordering From:</string>
    <string name="hotel">Hotel</string>
    <string name="proceed">Proceed To Cart</string>
    <string name="order">Your previous orders are listed below:</string>
    <string name="date">12/06/2001</string>
    <string name="empty">No Favourites Added</string>
</resources>