<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homeMenu"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/myProfile"
            android:icon="@drawable/ic_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/favourites"
            android:icon="@drawable/ic_favourites"
            android:title="@string/favourites" />
        <item
            android:id="@+id/orderHistory"
            android:icon="@drawable/ic_history"
            android:title="@string/order_history" />
        <item
            android:id="@+id/faqs"
            android:title="@string/faqs"
            android:icon="@drawable/ic_faqs" />
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout" />
    </group>

</menu>