<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#19FFFFFF"
    tools:context=".fragment.FaqsFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@drawable/dotted_line"
            android:layerType="software"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_1"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textColor="#000"
        android:padding="8dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="8dp"
        android:textColor="#000"
        android:textSize="18sp"
        android:text="@string/answer_1" />
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@drawable/dotted_line"
            android:layerType="software"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_2"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="#000"
            android:padding="8dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:text="@string/answer_2" />
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@drawable/dotted_line"
            android:layerType="software"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_3"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="#000"
            android:padding="8dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:text="@string/answer_3" />
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@drawable/dotted_line"
            android:layerType="software"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_4"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="#000"
            android:padding="8dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:text="@string/answer_4" />
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@drawable/dotted_line"
            android:layerType="software"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_5"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="#000"
            android:padding="8dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:textColor="#000"
            android:textSize="18sp"
            android:text="@string/answer_5" />
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/dotted_line"
            android:layerType="software"/>
    </LinearLayout>
    </ScrollView>
</FrameLayout>