<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBarR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:background="@color/colorPrimaryDark"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        android:text="@string/register_yourself"
        android:textColor="#fff"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtNameR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:layout_margin="20dp"
        android:background="#fff"
        android:hint="@string/name_min"
        android:inputType="text"
        android:maxLength="32"
        android:maxLines="1"
        android:padding="6dp"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtMailR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNameR"
        android:layout_margin="20dp"
        android:background="#fff"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="6dp"
        android:hint="@string/mail"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtMobileR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMailR"
        android:layout_margin="20dp"
        android:background="#fff"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp"
        android:hint="@string/mobile_number"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMobileR"
        android:layout_margin="20dp"
        android:background="#fff"
        android:maxLength="50"
        android:maxLines="1"
        android:padding="6dp"
        android:hint="@string/enter_address"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtPasswordR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAddress"
        android:layout_margin="20dp"
        android:background="#fff"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="6dp"
        android:hint="@string/password_min"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtConfirmR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPasswordR"
        android:layout_margin="20dp"
        android:background="#fff"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="6dp"
        android:hint="@string/confirm_password"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRegisterR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtConfirmR"
        android:layout_margin="20dp"
        android:background="@color/colorPrimaryDark"
        android:padding="6dp"
        android:text="@string/register"
        android:textColor="#fff" />
</RelativeLayout>