<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:minHeight="100dp"
    app:cardCornerRadius="2dp" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            android:id="@+id/serialFood"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:padding="4dp"
            android:text="@string/_1"
            android:textColor="#000"
            android:textSize="20sp"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <TextView
                android:id="@+id/txtfoodName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="4dp"
                android:text="@string/food_name"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtfoodName"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/rs"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/rsFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/_250"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_weight="2"
            android:background="@color/colorPrimaryDark"
            android:text="@string/add"
            android:textColor="#fff"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>