<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.VerificationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBarV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:background="@color/colorPrimaryDark"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/enter_the_otp_sent"
        android:textColor="#fff"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_margin="20dp"
        android:background="#fff"
        android:hint="@string/enter_otp"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPasswordV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etOtp"
        android:layout_margin="20dp"
        android:background="#fff"
        android:hint="@string/reset_password"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etConfirmPasswordV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPasswordV"
        android:layout_margin="20dp"
        android:background="#fff"
        android:hint="@string/confirm_password"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etConfirmPasswordV"
        android:layout_margin="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/reset"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>