<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBarL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:background="@color/colorPrimaryDark"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways" />
    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>
        <!--android:contentDescription="@string/app_name"
        android:src="@drawable/food_logo_small" -->

    <EditText
        android:id="@+id/mobileNumberL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_margin="20dp"
        android:background="#fff"
        android:hint="@string/enter_mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/passwordL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobileNumberL"
        android:layout_margin="20dp"
        android:background="#fff"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="6dp"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLoginL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordL"
        android:layout_margin="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtForgotL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLoginL"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/txtSignUpL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="40dp"
        android:text="@string/sign_up_now"
        android:textColor="#fff" />
</RelativeLayout>