<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragment.MyProfileFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:background="#fff"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        />
    <TextView
        android:id="@+id/txtNameP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgProfile"
        android:layout_margin="20dp"
        android:background="#fff"
        android:text="@string/Name"
        android:textAlignment="center"
        android:maxLength="32"
        android:maxLines="1"
        android:padding="6dp"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtMailP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNameP"
        android:layout_margin="20dp"
        android:background="#fff"
        android:textAlignment="center"
        android:maxLines="1"
        android:padding="6dp"
        android:text="@string/mail"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtMobileP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMailP"
        android:layout_margin="20dp"
        android:background="#fff"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp"
        android:textAlignment="center"
        android:text="@string/mobile"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txtAddressP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMobileP"
        android:layout_margin="20dp"
        android:background="#fff"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="6dp"
        android:textAlignment="center"
        android:text="@string/address"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />
    </RelativeLayout>
</FrameLayout>